
	Rick Widmer
	- Make vadduser check that domain exists and user does not exist
	  before prompting for password
	- Add TODO file to record stuff I don't want to forget
	- Add README.vdelivermail 
	- Add examples for delete and bounce-no-mailbox to help on vadddomain

	Remo Mattei
	- Change upgrade script to use pw_domain instead of domain in example code
	  to change domain name field lengths.

5.4.19 - released 21-May-2007
	Rick Widmer
	- update to aclocal 1.9.5, automake 1.9.5, autoconf 2.59 to match my system
	- Don't set LocalPort to a real port number so the default case has a chance 
	  to identify how vchkpw was called.
	- ./configure tells status of onchange script setting
	- Fix rights problem with alias commands.  -  thanks Alessio Cecchi
	- Only report out of order entries when sorting files once per file
	- make pop syslog ./configure setting report itself like the rest of the choices
	- Make error messages more consistant (P/O checking Jonathan's bug report)

	Harm van Tilborg, Quinn Comendant
	- Do not allow delete of catchall address within account. [1511531]

	Bill Shupp
	- enable-onchange-script defaults to no.  
	  NOTE: Still need to supress error message if file not found.
	- Fix bug in output format of list_alias
	- Remove unneeded AC_DEFINE_UNQUOTED from ONCHANGE_SCRIPT in configure
	- Port remaining spamassassin code from 5.5 branch to stable-5_4.
	- Add new --enable-maildrop option, and new NO_MAILDROP bit flag. 
	- New Documentation: README.maildrop, README.spamassassin
	- Sample maildroprc files for both 1.x and 2.x (maildrop/*)

	Fabio Busatto
	- #include <stdio.h> at top of vpopmail.h


	blaze_cs
	- Ldap back end reads config parms from a file at runtime. [1056529][1476647]

        Stoyan Marinov (smarinov)
	- add %m$t style for SQL queries format string [1236349]
	- connect to mysql with a unix socket  [1437085]


5.4.18 - released 30-Dec-06

        Joshua Megerman (offsides)